Cambio parametros en url y espacios de nombres

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     },
     "autoload":{
     	"psr-4":{
-    		"Blacktrue\\" : "src"
+    		"Blacktrue\\CfdiValidator\\" : "src"
     	}
     }
 }
