--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,8 @@
     	"psr-4":{
     		"Blacktrue\\CfdiValidator\\" : "src"
     	}
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^6.3"
     }
 }
